first commit: port/project nav

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -21,7 +21,7 @@
   "empty_user_profile": "该用户还没有发布一篇文章",
   "news": "最新",
   "wallet": "钱包",
-  "bookmarks": "書籤",
+  "bookmarks": "书签",
   "bookmarks_empty": "您没有收藏任何文章",
   "notifications": "通知",
   "notification_following_username": "{username} 关注你了。",
